# u-tad_blackboard-scorm-scraper

./: .gitignore  README.md  main.py  pyproject.toml
scraper/: config.py  models.py  output.py  setup.py
scraper/extractors/: course.py  lesson.py  sidebar.py
scraper/formats/: base.py  md.py  pdf.py
scraper/formats/base/: __init__.py  builder.py  writer.py
scraper/formats/md/: __init__.py  builder.py  html_parser.py  writer.py
scraper/formats/pdf/: __init__.py  builder.py  config.py  html_flowables.py  html_parser.py  themes.py  utils.py  writer.py
scraper/models/: course_scheme.py  lesson_content.py
scraper/parsers/: block_parser.py  html_to_markdown.py  lesson.py  sidebar.py
scraper/parsers/blocks/: __init__.py  accordion.py  base.py  button.py  button_stack.py  code.py  end_of_lesson.py  flashcards.py  gallery_carousel.py  image.py  image_with_buttons.py  labeled_image.py  numbered_list.py  slideshow.py  tabs.py  text.py  title.py  unknown.py  video.py
scraper/parsers/utils/: assets.py
scraper/utils/: assets.py  html_to_markdown.py  links.py  md.py
