[project]
name = "blackboard-scorm-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "javierlnmn",email = "jlm03123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "guesslang (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]

[tool.ruff]
line-length = 110
exclude = ["migrations"]
lint.select = ["F", "E", "W", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
